--- a/nuxtjs3/.cursor_ai_01.md
+++ b/nuxtjs3/.cursor_ai_01.md
@@ -1,4 +1,5 @@
-帮我在nuxtjs1中按需配置ElementPlus
 
 
-帮我用prisma
+帮我用prisma 设计 用户管理权限系统 用户,部门,用户可以有多个部门,每个角色在部门中有特定的权限
+我的nuxtjs3项目 有文章管理,文章审核,文章分类,文章发布功能,用户管理,部门管理,角色管理,权限管理
+
